Add script crawl

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A basic linkscrapper for ts-scraper",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "crawl": "tsc && node lib/index.js"
   },
   "author": "Pramod Kumar",
   "license": "MIT",
